--- a/folders/inner/index.html
+++ b/folders/inner/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Заголовок про булки</h1>
     <p>Какая то информация про вкусные булки</p>
-    <li>Булка 1<img src="/img/abs.jpg" alt="абсолютный путь"></li>
+    <li>Булка 1<img src="/PROJECT/img/abs.jpg" alt="абсолютный путь"></li>
     <li>Булка 2<img src="../../img/otn.jpg" alt="относительный путь"></li>
 </body>
 </html>
